--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,3 +118,33 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+.tag-size-1{
+  font-size: 70%;
+  color: red;
+  display: inline;
+}
+
+.tag-size-2{
+  font-size: 90%;
+  color: blue;
+  display: inline;
+}
+
+.tag-size-3{
+  font-size: 100%;
+  color: orange;
+  display: inline;
+}
+
+.tag-size-4{
+  font-size: 120%;
+  color: green;
+  display: inline;
+}
+
+.tag-size-5{
+  font-size: 150%;
+  color: purple;
+  display: inline;
+}
